tests/bounded_poly/bounded_poly.exp
Error: test.js:3
  3:     var y: string = x; // error
                         ^ number. This type is incompatible with
  3:     var y: string = x; // error
                ^^^^^^ string

Error: test.js:9
  9:         return x; // error, since T: number and U: number does not imply U: T
                    ^ number. This type is incompatible with the expected return type of
  7: class C<T: number> {
           ^ some incompatible instantiation of `T`

Error: test.js:13
 13:         var y: string = x; // error
                             ^ number. This type is incompatible with
 13:         var y: string = x; // error
                    ^^^^^^ string

Error: test.js:22
 22: var c: C<string> = new C; // error, since T = string is incompatible with number
              ^^^^^^ string. This type is incompatible with
  7: class C<T: number> {
                ^^^^^^ number

Error: test.js:22
 22: var c: C<string> = new C; // error, since T = string is incompatible with number
                        ^^^^^ C. Has some incompatible type argument with
 22: var c: C<string> = new C; // error, since T = string is incompatible with number
            ^^^^^^^^^ C
  Type argument `T` is incompatible:
     22: var c: C<string> = new C; // error, since T = string is incompatible with number
                  ^^^^^^ string. This type is incompatible with
      7: class C<T: number> {
                    ^^^^^^ number

Error: test.js:23
 23: var q: number = c.qux(0);
                     ^^^^^^^^ string. This type is incompatible with
 23: var q: number = c.qux(0);
            ^^^^^^ number

Error: test.js:23
 23: var q: number = c.qux(0);
                           ^ number. This type is incompatible with the expected param type of
 22: var c: C<string> = new C; // error, since T = string is incompatible with number
              ^^^^^^ string


Found 7 errors
